Temporary fix for drag&drop in listview + start adding new page

--- a/AddOrChangeAssetPage.xaml
+++ b/AddOrChangeAssetPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="ScreenlyManager.MainPage"
+    x:Class="ScreenlyManager.AddOrChangeAssetPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ScreenlyManager"
@@ -23,11 +23,11 @@
                 <TextBlock Text="Raspberry List" Margin="12,14"/>
             </CommandBar.Content>
             <AppBarButton Icon="Add" Label="Add Device"/>
-            <AppBarButton x:Name="AppBarButtonRefreshDevice" Icon="Refresh" Label="Refresh Devices" Click="AppBarButtonRefreshDevice_Click"/>
-            <AppBarButton x:Name="AppBarButtonExportConf" Icon="SaveLocal" Label="Export configuration" Click="AppBarButtonExportConf_Click"/>
-            <AppBarButton x:Name="AppBarButtonImportConf" Icon="Upload" Label="Import configuration" Click="AppBarButtonImportConf_Click"/>
+            <AppBarButton x:Name="AppBarButtonRefreshDevice" Icon="Refresh" Label="Refresh Devices"/>
+            <AppBarButton x:Name="AppBarButtonExportConf" Icon="SaveLocal" Label="Export configuration"/>
+            <AppBarButton x:Name="AppBarButtonImportConf" Icon="Upload" Label="Import configuration"/>
         </CommandBar>
-        <ListView x:Name="ListViewDevice" Grid.Column="0" Margin="10,50,10,10" ItemClick="ListViewDeviceItem_Click" IsItemClickEnabled="True" IsMultiSelectCheckBoxEnabled="False">
+        <ListView x:Name="ListViewDevice" Grid.Column="0" Margin="10,50,10,10" IsItemClickEnabled="True" IsMultiSelectCheckBoxEnabled="False">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="local:Device">
                     <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
@@ -56,21 +56,19 @@
                 </Style>
             </ListView.ItemContainerStyle>
         </ListView>
-
-        <!-- Main Page -->
+        
         <CommandBar x:Name="CommandBarMain" Grid.Column="1">
             <CommandBar.Content>
                 <TextBlock x:Name="TextBlockCommandBarMain" Text="Schedule Overview" Margin="12,14"/>
             </CommandBar.Content>
-            <AppBarButton x:Name="AppBarButtonAddAsset" Icon="Add" Label="Add Asset" Click="AppBarButtonAddAsset_Click"/>
-            <AppBarButton x:Name="AppBarButtonRefreshAssets" Icon="Refresh" Label="Refresh Assets" Click="AppBarButtonRefreshAssets_Click"/>
+            <AppBarButton x:Name="AppBarButtonAddAsset" Icon="Add" Label="Add Asset"/>
+            <AppBarButton x:Name="AppBarButtonRefreshAssets" Icon="Refresh" Label="Refresh Assets"/>
         </CommandBar>
         <ScrollViewer Grid.Column="1" Margin="10,50,10,10" VerticalScrollBarVisibility="Auto">
             <StackPanel>
                 <Border Background="#FFBC1142">
                     <TextBlock x:Name="TextBlockActiveAsset" Text="Active assets" Padding="10,15" Foreground="#FFFFFF" FontSize="20"/>
                 </Border>
-                <!-- Active Assets -->
                 <ListView x:Name="ListViewActiveAssets" Margin="10,10,10,10" CanReorderItems="True" AllowDrop="True" CanDragItems="True" SelectionMode="Extended">
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="local:Asset">
@@ -92,10 +90,10 @@
                                 <TextBlock Text="{x:Bind Name}" Grid.Column="2" FontSize="18" VerticalAlignment="Center" Padding="0,0,5,0"/>
                                 <TextBlock Text="{x:Bind StartDate}" Grid.Column="3" FontSize="16" VerticalAlignment="Center" Padding="0,0,5,0"/>
                                 <TextBlock Text="{x:Bind EndDate}" Grid.Column="4" FontSize="16" VerticalAlignment="Center" Padding="0,0,5,0"/>
-                                <Button x:Name="ButtonPreview" Content="&#xE8A1;" FontFamily="Segoe MDL2 Assets" Grid.Column="5" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5,0" FontSize="20" Height="36" Click="ButtonPreview_Click" Tag="{x:Bind ReadableUri}"/>
+                                <Button x:Name="ButtonPreview" Content="&#xE8A1;" FontFamily="Segoe MDL2 Assets" Grid.Column="5" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5,0" FontSize="20" Height="36" Tag="{x:Bind ReadableUri}"/>
                                 <Button x:Name="ButtonChange" Content="&#xE1C2;" FontFamily="Segoe MDL2 Assets" Grid.Column="6" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5,0" FontSize="20" Height="36"/>
-                                <Button x:Name="ButtonRemove" Content="&#xE74D;" FontFamily="Segoe MDL2 Assets" Grid.Column="7" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5,0" FontSize="20" Height="36" Click="ButtonRemove_Click" Tag="{x:Bind AssetId}"/>
-                                <ToggleSwitch Grid.Column="8" x:Name="ToggleSwitchEnable" IsOn="{x:Bind IsEnabledSwitch}" OnContent="On" OffContent="Off" Padding="5,0" Toggled="ToggleSwitchEnable_Toggled"/>
+                                <Button x:Name="ButtonRemove" Content="&#xE74D;" FontFamily="Segoe MDL2 Assets" Grid.Column="7" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5,0" FontSize="20" Height="36" Tag="{x:Bind AssetId}"/>
+                                <ToggleSwitch Grid.Column="8" x:Name="ToggleSwitchEnable" IsOn="{x:Bind IsEnabledSwitch}" OnContent="On" OffContent="Off" Padding="5,0" />
 
                             </Grid>
                         </DataTemplate>
@@ -132,10 +130,10 @@
                                 <TextBlock Text="{x:Bind Name}" Grid.Column="2" FontSize="18" VerticalAlignment="Center" Padding="0,0,5,0"/>
                                 <TextBlock Text="{x:Bind StartDate}" Grid.Column="3" FontSize="16" VerticalAlignment="Center" Padding="0,0,5,0"/>
                                 <TextBlock Text="{x:Bind EndDate}" Grid.Column="4" FontSize="16" VerticalAlignment="Center" Padding="0,0,5,0"/>
-                                <Button x:Name="ButtonPreview" Content="&#xE8A1;" FontFamily="Segoe MDL2 Assets" Grid.Column="5" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5,0" FontSize="20" Height="36" Click="ButtonPreview_Click" Tag="{x:Bind ReadableUri}"/>
+                                <Button x:Name="ButtonPreview" Content="&#xE8A1;" FontFamily="Segoe MDL2 Assets" Grid.Column="5" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5,0" FontSize="20" Height="36" Tag="{x:Bind ReadableUri}"/>
                                 <Button x:Name="ButtonChange" Content="&#xE1C2;" FontFamily="Segoe MDL2 Assets" Grid.Column="6" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5,0" FontSize="20" Height="36"/>
-                                <Button x:Name="ButtonRemove" Content="&#xE74D;" FontFamily="Segoe MDL2 Assets" Grid.Column="7" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5,0" FontSize="20" Height="36" Click="ButtonRemove_Click" Tag="{x:Bind AssetId}"/>
-                                <ToggleSwitch Grid.Column="8" x:Name="ToggleSwitchEnable" IsOn="{x:Bind IsEnabledSwitch}" OnContent="On" OffContent="Off" Padding="5,0" Toggled="ToggleSwitchEnable_Toggled"/>
+                                <Button x:Name="ButtonRemove" Content="&#xE74D;" FontFamily="Segoe MDL2 Assets" Grid.Column="7" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5,0" FontSize="20" Height="36" Tag="{x:Bind AssetId}"/>
+                                <ToggleSwitch Grid.Column="8" x:Name="ToggleSwitchEnable" IsOn="{x:Bind IsEnabledSwitch}" OnContent="On" OffContent="Off" Padding="5,0"/>
 
                             </Grid>
                         </DataTemplate>
