Add device's status in device's list (todo : background task to check every X minutes) + migration from HttpWebRequest to HttpClient + refactorisation of Device.cs

--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -7,6 +7,11 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
+    <Page.Resources>
+        <local:XamlConverters x:Key="ColorConverter"/>
+        <local:XamlConverters x:Key="MimetypeConverter"/>
+    </Page.Resources>
+
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <SplitView IsPaneOpen="True" DisplayMode="Inline" OpenPaneLength="296">
             <SplitView.Pane>
@@ -27,6 +32,7 @@
                                         <ColumnDefinition Width="48"/>
                                         <ColumnDefinition />
                                         <ColumnDefinition />
+                                        <ColumnDefinition />
                                     </Grid.ColumnDefinitions>
                                     <Grid.RowDefinitions>
                                         <RowDefinition/>
@@ -34,9 +40,10 @@
                                     </Grid.RowDefinitions>
 
                                     <Image Grid.RowSpan="2" Grid.Column="0" Source="Assets/raspberry-36.png" HorizontalAlignment="Left" VerticalAlignment="Center" Stretch="None"/>
-                                    <TextBlock Text="{x:Bind Name}" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" FontSize="20"/>
+                                    <TextBlock Text="{x:Bind Name}" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="3" FontSize="20"/>
                                     <TextBlock Text="{x:Bind Location}" Grid.Column="1" Grid.Row="1" FontSize="11" />
-                                    <TextBlock Text="{x:Bind IpAddress}" Grid.Column="2" Grid.Row="1" FontSize="11" HorizontalAlignment="Right"/>
+                                    <TextBlock Text="{x:Bind IpAddress}" Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2" FontSize="11" HorizontalAlignment="Right"/>
+                                    <Ellipse Grid.Column="3" Grid.Row="0" Fill="{x:Bind IsUp, Converter={StaticResource ColorConverter}}" HorizontalAlignment="Right" VerticalAlignment="Top" Height="12" Width="12"/>
 
                                 </Grid>
                             </DataTemplate>
@@ -83,7 +90,7 @@
                                         </Grid.ColumnDefinitions>
 
                                         <TextBlock Text="&#xE700;" FontFamily="Segoe MDL2 Assets" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                                        <TextBlock Text="{x:Bind AssetType}" FontFamily="Segoe MDL2 Assets" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                                        <TextBlock Text="{x:Bind Mimetype, Converter={StaticResource MimetypeConverter}}" FontFamily="Segoe MDL2 Assets" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                                         <TextBlock Text="{x:Bind Name}" Grid.Column="2" FontSize="18" VerticalAlignment="Center" Padding="0,0,5,0"/>
                                         <TextBlock Text="{x:Bind StartDate}" Grid.Column="3" FontSize="16" VerticalAlignment="Center" Padding="0,0,5,0"/>
                                         <TextBlock Text="{x:Bind EndDate}" Grid.Column="4" FontSize="16" VerticalAlignment="Center" Padding="0,0,5,0"/>
@@ -123,7 +130,7 @@
                                             <ColumnDefinition Width="108" />
                                         </Grid.ColumnDefinitions>
 
-                                        <TextBlock Text="{x:Bind AssetType}" FontFamily="Segoe MDL2 Assets" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                                        <TextBlock Text="{x:Bind Mimetype, Converter={StaticResource MimetypeConverter}}" FontFamily="Segoe MDL2 Assets" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                                         <TextBlock Text="{x:Bind Name}" Grid.Column="2" FontSize="18" VerticalAlignment="Center" Padding="0,0,5,0"/>
                                         <TextBlock Text="{x:Bind StartDate}" Grid.Column="3" FontSize="16" VerticalAlignment="Center" Padding="0,0,5,0"/>
                                         <TextBlock Text="{x:Bind EndDate}" Grid.Column="4" FontSize="16" VerticalAlignment="Center" Padding="0,0,5,0"/>
