--- a/AddOrChangeDevicePage.xaml
+++ b/AddOrChangeDevicePage.xaml
@@ -9,12 +9,25 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         
-        <TextBlock Grid.Column="1" Text="Add new device" FontSize="30" HorizontalAlignment="Center"/>
+        <StackPanel Grid.Column="0">
+            <TextBlock Text="Add new device" FontSize="30" HorizontalAlignment="Left" Margin="20, 12"/>
+            <TextBlock Text="Name" HorizontalAlignment="Left" Margin="20, 2"/>
+            <TextBox x:Name="TextBoxName" Margin="20,2" MaxLength="30" PlaceholderText="Friendly name for device" />
+            <TextBlock Text="Location" HorizontalAlignment="Left" Margin="20, 20, 20, 2"/>
+            <TextBox x:Name="TextBoxLocation" Margin="20,2" MaxLength="30" PlaceholderText="The place where he is" />
+            <TextBlock Text="IP Address" HorizontalAlignment="Left" Margin="20, 20, 20, 2"/>
+            <TextBox x:Name="TextBoxIp" Margin="20,2"  MaxLength="30" PlaceholderText="Like 192.168.1.10" />
+            <TextBlock Text="Port" HorizontalAlignment="Left" Margin="20, 20, 20, 2"/>
+            <TextBox x:Name="TextBoxPort" Margin="20, 2" MaxLength="30" PlaceholderText="Commonly 8080" />
+            <RelativePanel Margin="20, 30, 20, 2" HorizontalAlignment="Right">
+                <Button Grid.Column="1" x:Name="ButtonSubmit" Content="Submit" Width="100" HorizontalAlignment="Right" Margin="0, 0, 20, 0" Click="ButtonSubmit_Click" />
+                <Button RelativePanel.RightOf="ButtonSubmit" Grid.Column="2" Width="100" x:Name="ButtonCancel" Content="Cancel" Padding="20, 4" HorizontalAlignment="Right" Click="ButtonCancel_Click"/>
+            </RelativePanel>
 
+        </StackPanel>
     </Grid>
 </Page>
